# starlite-cli

./: .pre-commit-config.yaml  README.md  pyproject.toml
starlite_cli/: main.py
